# kworkflow

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml  ruff.toml
src/kworkflow/auth/: id_provider.py  telegram_auth.py
src/kworkflow/background_tasks/: tasks.py
src/kworkflow/entrypoint/: cli.py  di.py  telegram_bot.py
src/kworkflow/infra/database/migrations/: env.py
src/kworkflow/infra/database/migrations/versions/: 02fe5f18888b_add_user_freelancer_profiles_table.py  052e8ef1194a_add_project_notifications_table.py  1afac6342bb9_add_created_at_column_to_projects_table.py  4374c7d23d8c_add_created_at_column_to_user_category_.py  48ec5a5b6bf4_add_project_proposals_table.py  56c6f3b9864a_add_user_category_follows_table.py  58a2ff036a53_add_user_roles_table.py  80386242a23b_add_users_table.py  (+5 more)
src/kworkflow/infra/kwork/: client.py
src/kworkflow/infra/taskiq/: broker.py  queue.py
src/kworkflow/infra/telegram/: telegram_notifier.py
src/kworkflow/main/: cli.py  config.py  di.py  telegram_bot.py  worker.py
src/kworkflow/notifications/: gateways.py  interfaces.py  models.py  services.py
src/kworkflow/preferences/: consts.py  dto.py  exceptions.py  gateways.py  models.py  services.py
src/kworkflow/projects/: exceptions.py  gateway.py  generators.py  interfaces.py  models.py  services.py
src/kworkflow/telegram_bot/: keyboards.py  messages.py  states.py
src/kworkflow/telegram_bot/handlers/: default.py  preferences.py  projects.py
src/kworkflow/users/: exceptions.py  gateways.py  models.py
