[project]
name = "kworkflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.10.1",
    "httpx>=0.28.1",
    "kwork>=0.2.0",
    "psycopg2-binary>=2.9.12",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.13",
    "ty>=0.0.37",
]


[tool.uv]
package=true
